Work in progress on section 4.

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -93,7 +93,9 @@
 
 @misc{FsPickler,
   title = "FsPickler",
-  howpublished = {\url{http://nessos.github.io/FsPickler/index.html}}
+  author="Eirik Tsarpalis",
+  date=2013,
+  howpublished = {\url{http://nessos.github.io/FsPickler}}
 }
 
 @inproceedings{RepLib,
@@ -131,6 +133,15 @@
  address = {New York, NY, USA},
  keywords = {datatype-generic programming, polytypic programming, scala},
 } 
+
+@inproceedings{polyp,
+  title={PolyP—a polytypic programming language extension},
+  author={Jansson, Patrik and Jeuring, Johan},
+  booktitle={Proceedings of the 24th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  pages={470--482},
+  year={1997},
+  organization={ACM}
+}
 
 @article{CompGen,
  author = {Rodriguez, Alexey and Jeuring, Johan and Jansson, Patrik and Gerdes, Alex and Kiselyov, Oleg and Oliveira, Bruno C. d. S.},
@@ -242,31 +253,18 @@ institution  = {Microsoft Research}
  title = {Uniform Boilerplate and List Processing},
  booktitle = {Proceedings of the ACM SIGPLAN Workshop on Haskell Workshop},
  series = {Haskell '07},
- year = {2007},
+ year = 2007,
  isbn = {978-1-59593-674-5},
  location = {Freiburg, Germany},
  pages = {49--60},
- numpages = {12},
+ numpages = 12,
  url = {http://doi.acm.org/10.1145/1291201.1291208},
  doi = {10.1145/1291201.1291208},
- acmid = {1291208},
+ acmid = 1291208,
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
 
-@Manual {TypeProviders,
-abstract     = {<p>The type provider mechanism in F{\#} 3.0 is a significant part of its support for
-                information rich programming. This tutorial explains how to create your own type
-                providers by walking you through the development of several simple type providers
-                to illustrate the basic concepts.</p>},
-author       = {Don Syme and Keith Battocchi and Gordon Hodgenson},
-month        = {January},
-note         = {See http://msdn.microsoft.com/en-us/library/hh361034.aspx},
-publisher    = {Microsoft},
-title        = {Creating a Type Provider (F{\#})},
-url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=192597},
-year         = {2013},
-}
 
 @inproceedings{DTP,
  author = {Christiansen, David Raymond},
@@ -285,3 +283,23 @@ year         = {2013},
  address = {New York, NY, USA},
  keywords = {dependent types, generic programming, metaprogramming, type providers},
 } 
+
+@incollection{GenericHaskell,
+  title={Generic Haskell: Practice and Theory},
+  author={Hinze, Ralf and Jeuring, Johan},
+  booktitle={Generic Programming},
+  pages={1--56},
+  year={2003},
+  publisher={Springer}
+}
+
+
+
+@inproceedings{instant2,
+  title={Generic programming for indexed datatypes},
+  author={Magalh{\~a}es, Jos{\'e} Pedro and Jeuring, Johan},
+  booktitle={Proceedings of the seventh ACM SIGPLAN workshop on Generic programming},
+  pages={37--46},
+  year={2011},
+  organization={ACM}
+}
