Finished edits on intro and section 4.

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -1,5 +1,5 @@
 @article{SYB,
- author = {L\"{a}mmel, Ralf and Jones, Simon Peyton},
+ author = {L\"{a}mmel, Ralf and Peyton Jones, Simon},
  title = {Scrap Your Boilerplate: A Practical Design Pattern for Generic Programming},
  journal = {SIGPLAN Not.},
  issue_date = {March 2003},
