--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -94,7 +94,7 @@
 @misc{FsPickler,
   title = "FsPickler",
   author="Eirik Tsarpalis",
-  date=2013,
+  year=2013,
   howpublished = {\url{http://nessos.github.io/FsPickler}}
 }
 
