Lots of small typography fixes/text polishing.

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -92,7 +92,7 @@
 }
 
 @misc{FsPickler,
-  title = "FsPickler",
+  title = {{FsPickler}},
   author="Eirik Tsarpalis",
   year=2013,
   howpublished = {\url{http://nessos.github.io/FsPickler}}
