Moved uniplate section forward.

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -36,7 +36,7 @@
  keywords = {datatype-generic programming, term rewriting},
 }
 
-@article{MultiRec,
+@article{multirec,
  author = {Yakushev, Alexey Rodriguez and Holdermans, Stefan and L\"{o}h, Andres and Jeuring, Johan},
  title = {Generic Programming with Fixed Points for Mutually Recursive Datatypes},
  journal = {SIGPLAN Not.},
