Added Scala related work at the intro since the paper was published at a previous WGP conference

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -303,3 +303,17 @@ institution  = {Microsoft Research}
   year={2011},
   organization={ACM}
 }
+
+
+@article{scala-jfp,
+  title = "Scala for Generic Programmers",
+  author = "Bruno C. d. S. Oliveira and Jeremy Gibbons",
+  year = "2010",
+  journal = "Journal of Functional Programming",
+  note = "Revised version of the WGP2008 paper",
+  number = "3,4",
+  pages = "303-352",
+  url = "http://www.comlab.ox.ac.uk/jeremy.gibbons/publications/scalagp-jfp.pdf",
+  volume = "20",
+  doi = "10.1017/S0956796810000171",
+}
