Added section explaining member constraints

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -98,6 +98,22 @@
   howpublished = {\url{http://nessos.github.io/FsPickler}}
 }
 
+@misc{Nancy,
+  title = {{Nancy}},
+  author="Nancy Fx",
+  howpublished = "\url{http://nancyfx.org}",
+  notes={Recovered on May 9th, 2015}
+}
+
+@INPROCEEDINGS{TemplateHaskell,
+    author = {Tim Sheard and Simon Peyton Jones},
+    title = {Template Meta-programming for Haskell},
+    booktitle = {In Proceedings of the ACM SIGPLAN Workshop on Haskell},
+    year = {2002},
+    pages = {1--16},
+    publisher = {ACM}
+}
+
 @inproceedings{RepLib,
  author = {Weirich, Stephanie},
  title = {RepLib: A Library for Derivable Type Classes},
@@ -239,6 +255,13 @@ institution  = {Microsoft Research}
   author = {Rodriguez, Ernesto},
   title = {Regular - gmap},
   howpublished = "\url{https://github.com/netogallo/FSharp-Generics/blob/master/Proposal/src/Main.hs}"
+}
+
+@misc{InterfaceLims,
+  author={Tihon, Sergey},
+  title="My first disappointment of the F\# type system",
+  howpublished="\url{https://sergeytihon.wordpress.com/ 2013/03/29/my-first-disappointment-on-f-type-system/}",
+  notes = {Recovered on May 9th, 2015}
 }
 
 @misc{NoKinds,
