--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -428,3 +428,12 @@ title        = {Expert F{\#} 3.0},
 url          = {http://research.microsoft.com/ apps/ pubs/ default.aspx?id=192596},
 year         = {2012},
 }
+
+@INPROCEEDINGS{Cheney02alightweight,
+    author = {James Cheney and Ralf Hinze},
+    title = {A Lightweight Implementation of Generics and Dynamics},
+    booktitle = {Proceedings of the 2002 ACM SIGPLAN Haskell Workshop},
+    year = {2002},
+    pages = {90--104},
+    publisher = {ACM Press}
+}
