--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -100,7 +100,7 @@
 
 @misc{Nancy,
   title = {{Nancy}},
-  author="Nancy Fx",
+  author="Nancy Fx Team",
   howpublished = "\url{http://nancyfx.org}",
   notes={Recovered on May 9th, 2015}
 }
