Review last edits

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -98,6 +98,14 @@
   howpublished = {\url{http://nessos.github.io/ FsPickler}}
 }
 
+@misc{FSharp-Generics-Repo,
+  title = {{FSharp-Generics}},
+  author="Ernesto Rodriguez",
+  year=2015,
+  howpublished = {\url{https://github.com/netogallo/FSharp-Generics}}
+}
+
+
 @misc{Nancy,
   title = {{Nancy}},
   author="Andreas H\r{a}kansson and Steven Robbins",
