Finished discussion/conclusions.

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -1,3 +1,12 @@
+@incollection{backhouse,
+  title={Generic Programming},
+  author={Backhouse, Roland and Jansson, Patrik and Jeuring, Johan and Meertens, Lambert},
+  booktitle={Advanced Functional Programming},
+  pages={28--115},
+  year={1999},
+  publisher={Springer}
+}
+
 @article{SYB,
  author = {L\"{a}mmel, Ralf and Peyton Jones, Simon},
  title = {Scrap Your Boilerplate: A Practical Design Pattern for Generic Programming},
@@ -159,7 +168,7 @@
 } 
 
 @inproceedings{polyp,
-  title={PolyP—a polytypic programming language extension},
+  title={PolyP -- a polytypic programming language extension},
   author={Jansson, Patrik and Jeuring, Johan},
   booktitle={Proceedings of the 24th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
   pages={470--482},
