--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -108,10 +108,10 @@
 }
 
 @misc{FSharp-Generics-Repo,
-  title = {{FSharp-Generics}},
+  title = {{A library for datatype generic programming in F\#}},
   author="Ernesto Rodriguez",
   year=2015,
-  howpublished = {\url{https://github.com/netogallo/FSharp-Generics}}
+  howpublished = {\url{http://github.com/netogallo/FSharp-Generics}}
 }
 
 
