--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -325,7 +325,7 @@ institution  = {Microsoft Research}
 } 
 
 @incollection{GenericHaskell,
-  title={Generic Haskell: Practice and Theory},
+  title={{Generic Haskell: Practice and Theory}},
   author={Hinze, Ralf and Jeuring, Johan},
   booktitle={Generic Programming},
   pages={1--56},
