Fixed bib and remark

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -7,20 +7,18 @@
   publisher={Springer}
 }
 
-@article{SYB,
- author = {L\"{a}mmel, Ralf and Peyton Jones, Simon},
+@inproceedings{SYB,
+ author = {L\"{a}mmel, Ralf and Jones, Simon Peyton},
  title = {Scrap Your Boilerplate: A Practical Design Pattern for Generic Programming},
- journal = {SIGPLAN Not.},
- issue_date = {March 2003},
- volume = {38},
- number = {3},
- month = jan,
+ booktitle = {Proceedings of the 2003 ACM SIGPLAN International Workshop on Types in Languages Design and Implementation},
+ series = {TLDI '03},
  year = {2003},
- issn = {0362-1340},
+ isbn = {1-58113-649-8},
+ location = {New Orleans, Louisiana, USA},
  pages = {26--37},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/640136.604179},
- doi = {10.1145/640136.604179},
+ url = {http://doi.acm.org/10.1145/604174.604179},
+ doi = {10.1145/604174.604179},
  acmid = {604179},
  publisher = {ACM},
  address = {New York, NY, USA},
@@ -28,41 +26,23 @@
 } 
 
 @inproceedings{Regular,
- author = {Noort, Thomas van and Rodriguez, Alexey and Holdermans, Stefan and Jeuring, Johan and Heeren, Bastiaan},
- title = {A Lightweight Approach to Datatype-generic Rewriting},
- booktitle = {Proceedings of the ACM SIGPLAN Workshop on Generic Programming},
- series = {WGP '08},
- year = {2008},
- isbn = {978-1-60558-060-9},
- location = {Victoria, BC, Canada},
- pages = {13--24},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/1411318.1411321},
- doi = {10.1145/1411318.1411321},
- acmid = {1411321},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {datatype-generic programming, term rewriting},
+author = {Thomas Van Noort and Alexey Rodriguez and Stefan Holdermans and Johan Jeuring and Bastiaan Heeren},
+title = {{A lightweight approach to datatype-generic rewriting}},
+booktitle = {International Conference on Functional Programming},
+year = {2008},
+pages = {13--24},
+doi = {10.1145/1411318.1411321},
+masid = {4716411}
 }
 
-@article{multirec,
- author = {Yakushev, Alexey Rodriguez and Holdermans, Stefan and L\"{o}h, Andres and Jeuring, Johan},
- title = {Generic Programming with Fixed Points for Mutually Recursive Datatypes},
- journal = {SIGPLAN Not.},
- issue_date = {September 2009},
- volume = {44},
- number = {9},
- month = aug,
- year = {2009},
- issn = {0362-1340},
- pages = {233--244},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/1631687.1596585},
- doi = {10.1145/1631687.1596585},
- acmid = {1596585},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {datatype-generic programming, fixed points, haskell, mutually recursive datatypes},
+@inproceedings{multirec,
+author = {Alexey Rodriguez Yakushev and Stefan Holdermans and Andres Löh and Johan Jeuring},
+title = {{Generic programming with fixed points for mutually recursive datatypes}},
+booktitle = {International Conference on Functional Programming},
+year = {2009},
+pages = {233--244},
+doi = {10.1145/1596550.1596585},
+masid = {4823155}
 }
 
 @inproceedings{PolyLib,
@@ -109,7 +89,6 @@
   year=2015,
   howpublished = {\url{http://github.com/netogallo/FSharp-Generics}}
 }
-
 
 @misc{Nancy,
   title = {{Nancy}},
@@ -172,24 +151,14 @@
   organization={ACM}
 }
 
-@article{CompGen,
- author = {Rodriguez, Alexey and Jeuring, Johan and Jansson, Patrik and Gerdes, Alex and Kiselyov, Oleg and Oliveira, Bruno C. d. S.},
- title = {Comparing Libraries for Generic Programming in Haskell},
- journal = {SIGPLAN Not.},
- issue_date = {February 2009},
- volume = {44},
- number = {2},
- month = sep,
- year = {2008},
- issn = {0362-1340},
- pages = {111--122},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/1543134.1411301},
- doi = {10.1145/1543134.1411301},
- acmid = {1411301},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {datatype-generic programming, libraries comparison},
+@inproceedings{CompGen,
+author = {Alexey Rodriguez and Johan Jeuring and Patrik Jansson and Alex Gerdes and Oleg Kiselyov and Bruno C. D. S. Oliveira},
+title = {{Comparing Libraries for Generic Programming in Haskell}},
+booktitle = {Haskell Workshop},
+year = {2008},
+pages = {111--122},
+doi = {10.1145/1411286.1411301},
+masid = {4823125}
 }
 
 @article{GenLangComp,
