--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -8,7 +8,7 @@
 }
 
 @inproceedings{SYB,
- author = {L\"{a}mmel, Ralf and Jones, Simon Peyton},
+ author = {L\"{a}mmel, Ralf and Peyton Jones, Simon},
  title = {Scrap Your Boilerplate: A Practical Design Pattern for Generic Programming},
  booktitle = {Proceedings of the 2003 ACM SIGPLAN International Workshop on Types in Languages Design and Implementation},
  series = {TLDI '03},
@@ -333,7 +333,7 @@ institution  = {Microsoft Research}
 }
 
 @INPROCEEDINGS{Sheard02templatemeta-programming,
-    author = {Tim Sheard and Simon Peyton Jones},
+    author = {Tim Sheard and Simon {Peyton Jones}},
     title = {Template Meta-programming for Haskell},
     booktitle = {In Proceedings of the ACM SIGPLAN Workshop on Haskell},
     year = {2002},
