Fixed comments for WGP

--- a/WGP/references.bib
+++ b/WGP/references.bib
@@ -142,6 +142,22 @@ masid = {4823155}
  keywords = {datatype-generic programming, polytypic programming, scala},
 } 
 
+@incollection{websharper,
+year={2015},
+isbn={978-3-319-15939-3},
+booktitle={Central European Functional Programming School},
+volume={8606},
+series={Lecture Notes in Computer Science},
+editor={Zsók, Viktória and Horváth, Zoltán and Csató, Lehel},
+doi={10.1007/978-3-319-15940-9_9},
+title={Functional Web and Mobile Development in F\#},
+url={http://dx.doi.org/10.1007/978-3-319-15940-9\_9},
+publisher={Springer International Publishing},
+author={Granicz, Adam},
+pages={381-406},
+language={English}
+}
+
 @inproceedings{polyp,
   title={PolyP -- a polytypic programming language extension},
   author={Jansson, Patrik and Jeuring, Johan},
